force-app/main/default/objects/Sales_Org__c/fields/Autopick__c.field-meta.xml
<CustomField>
    <fullName>Autopick__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use autopick by default</description>
    <label>Autopick</label>
    <type>Checkbox</type>
</CustomField>