force-app/main/default/objects/Sales_Org__c/fields/IsBlocked__c.field-meta.xml
<CustomField>
    <fullName>IsBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The sales org has stopped business. It should not be used in new transactions</description>
    <label>Is Blocked</label>
    <type>Checkbox</type>
</CustomField>