force-app/main/default/objects/Sales_Org__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>en-US</fullName>
            </value>
            <value>
                <fullName>es</fullName>
            </value>
            <value>
                <fullName>fr</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>