force-app/main/default/objects/Sales_Org__c/fields/RedirectTo__c.field-meta.xml
<CustomField>
    <fullName>RedirectTo__c</fullName>
    <description>New sales org that replaces the current one (i.e. 507 is redirected to 517)</description>
    <label>Redirect To Sales Org</label>
    <length>3</length>
    <type>Text</type>
</CustomField>