force-app/main/default/objects/Sales_Org__c/fields/RestrictedForSAP__c.field-meta.xml
<CustomField>
    <fullName>RestrictedForSAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si está activo, significa que para la ampliación de un cliente a esta organización, se necesitan permisos especiales</description>
    <label>Restricted for SAP</label>
    <type>Checkbox</type>
</CustomField>