force-app/main/default/objects/Sales_Org__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>Code of the Sales Org</description>
    <externalId>true</externalId>
    <label>Sales Org</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
</CustomField>