force-app/main/default/objects/Sales_Org__c/fields/SamplesCutoff__c.field-meta.xml
<CustomField>
    <fullName>SamplesCutoff__c</fullName>
    <description>Cut-off time to deliver samples in the mini delivery days</description>
    <label>Samples Cut-off TIme</label>
    <type>Time</type>
</CustomField>