force-app/main/default/objects/Sales_Org__c/fields/SamplesMinDays__c.field-meta.xml
<CustomField>
    <fullName>SamplesMinDays__c</fullName>
    <description>Minimum delivery days for samples</description>
    <label>Samples Min Delivery Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>