force-app/main/default/objects/Sales_Org__c/fields/SamplesWeekendDays__c.field-meta.xml
<CustomField>
    <fullName>SamplesWeekendDays__c</fullName>
    <description>Weekend days with samples delivery</description>
    <label>Samples Weekend Delivery</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>SUN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>