force-app/main/default/objects/Sales_Org__c/fields/Sap_Id__c.field-meta.xml
<CustomField>
    <fullName>Sap_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sap Id</label>
    <length>4</length>
    <type>Text</type>
</CustomField>