force-app/main/default/objects/Sales_Org__c/fields/TaxPercent__c.field-meta.xml
<CustomField>
    <fullName>TaxPercent__c</fullName>
    <label>Tax/VAT %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>