force-app/main/default/objects/Sales_Org__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SalesOrg__c</columns>
    <columns>CountryCode__c</columns>
    <columns>Company__c</columns>
    <columns>RestrictedForSAP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>